--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
           <div class="w-full self-center px-4 lg:w-1/2">
             <h1 class="text-base font-semibold text-primary md:text-xl">Halo Semua 👋, saya <span class="mt-1 block text-4xl font-bold text-dark dark:text-white lg:text-5xl">Dwi Aryanto</span></h1>
             <h2 class="mb-5 text-lg font-medium text-secondary lg:text-2xl">Designer & <span class="text-dark dark:text-white">Content Creator</span></h2>
-            <p class="mb-10 font-medium leading-relaxed text-secondary">Belajar web programming itu mudah dan menyenangkan bukan. <span class="font-bold text-dark dark:text-white">bukan!</span></p>
+            <p class="mb-10 font-medium leading-relaxed text-secondary">Yang penting Belajar dulu, kalau urusan <span class="font-bold text-dark dark:text-white">Gagal</span> itu masing-masing. hehe!!</p>
 
-            <a href="https://drive.google.com/file/d/1hJ-1nIIaFMa0eOr4MlTKyMDDBOVWPuAF/view" class="rounded-full bg-primary py-3 px-8 text-base font-semibold text-white transition duration-300 ease-in-out hover:opacity-80 hover:shadow-lg">Download CV</a>
+            <a href="https://dwiaryanto25.github.io/CV-me/" class="rounded-full bg-primary py-3 px-8 text-base font-semibold text-white transition duration-300 ease-in-out hover:opacity-80 hover:shadow-lg">Show CV</a>
           </div>
           <div class="w-full self-end px-4 lg:w-1/2">
             <div class="relative mt-10 lg:right-0 lg:mt-9">
@@ -108,13 +108,13 @@
         <div class="flex flex-wrap">
           <div class="mb-10 w-full px-4 lg:w-1/2">
             <h4 class="mb-3 text-lg font-bold uppercase text-primary">Tentang Saya</h4>
-            <h2 class="mb-5 max-w-md text-3xl font-bold text-dark dark:text-white lg:text-4xl">Yuk Belajar Bareng Guys!</h2>
-            <p class="max-w-xl text-base font-medium text-secondary lg:text-lg">Perkenalkan Saya Dwi Aryanto Mahasiswa UIN Sultan Maulana Hasanuddin Banten Prodi Ekonomi Syariah. Ini adalah website portfolio saya menggunakan Tailwind CSS.</p>
+            <h2 class="mb-5 max-w-md text-3xl font-bold text-dark dark:text-white lg:text-4xl">Siapa sih ini? Yuk saya jelaskan sedikit tentang saya</h2>
+            <p class="max-w-xl text-base font-medium text-secondary lg:text-lg">Saya Dwi Mahasiswa UIN SMH Banten, dulu sebelum mengenal dunia coding dan programing saya senang sekali dengan dunia design serta menyukai dibidang photographi tapi entah kenapa saya sekarang lebih menyukai dunia pemograman hehe.. </p>
           </div>
           <div class="w-full px-4 lg:w-1/2">
-            <h3 class="mb-4 text-2xl font-semibold text-dark dark:text-white lg:pt-10 lg:text-3xl">Mari berteman</h3>
+            <h3 class="mb-4 text-2xl font-semibold text-dark dark:text-white lg:pt-10 lg:text-3xl">Mau lebih kenal? 😁</h3>
             <p class="mb-6 text-base font-medium text-secondary lg:text-lg">
-              Saya aktif di sosial media terutama TikTok dan Instagram yaitu membuat konten random yang saya suka. Jangan lupa di Follow ya!
+              Kata orang tak kenal maka tak sayang tapi giliran udah kenal kenapa gak sayang sayang, eh langsung aja kali ya haha..
             </p>
             <div class="flex items-center">
               <!-- Youtube -->
@@ -197,7 +197,7 @@
             <h4 class="mb-2 text-lg font-semibold text-primary">Portfolio</h4>
             <h2 class="mb-4 text-3xl font-bold text-dark dark:text-white sm:text-4xl lg:text-5xl">Project Terbaru</h2>
             <p class="text-md font-medium text-secondary md:text-lg">
-              Saya Pernah membuat beberapa project portofolio. Dari mulai portfolio website pribadi sampai portfolio tugas belajar saya di perkuliahan.
+              Saya Pernah membuat beberapa project portofolio. Dari mulai portfolio website pribadi sampai portfolio tugas belajar sampingan saya di perkuliahan.
             </p>
           </div>
         </div>
@@ -214,8 +214,8 @@
             <div class="overflow-hidden rounded-md shadow-md">
               <img src="dist/img/portfolio/2.png" alt="E-Commerce" width="w-full" />
             </div>
-            <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">Belajar Coding</h3>
-            <p class="text-base font-medium text-secondary">Berikut ini merupakan merupakan salah satu bukti bahwa dari beberapa website portofolio pribadi adalah hasil kerja keras sendiri.</p>
+            <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">Landing Page E-Commerce</h3>
+            <p class="text-base font-medium text-secondary">Berikut ini merupakan website ecommerce yang pernah saya bikin di masa kuliah saya.</p>
           </div>
           <div class="mb-12 p-4 md:w-1/2">
             <div class="overflow-hidden rounded-md shadow-md">
@@ -228,8 +228,8 @@
             <div class="overflow-hidden rounded-md shadow-md">
               <img src="dist/img/portfolio/4.png" alt="Tribute Page" width="w-full" />
             </div>
-            <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">Documentation Kelas</h3>
-            <p class="text-base font-medium text-secondary">Berikut ini merupakan Dokumentasi teman-teman kelas saya di Universitas Islam Negeri Sultan Maulana hasanuddin Banten Prodi Ekonomi Syariah.</p>
+            <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">Landing Page Kedai Kopi</h3>
+            <p class="text-base font-medium text-secondary">Berikut ini merupakan hasil website kedai kopi kenangan senja yang terinspirasi dari berbagai kenangan yang tercipta pada waktu itu.</p>
           </div>
         </div>
       </div>
@@ -249,16 +249,16 @@
 
         <div class="w-full px-4">
           <div class="flex flex-wrap items-center justify-center">
-            <a href="#" class="mx-4 max-w-[120px] py-4 opacity-60 grayscale transition duration-500 hover:opacity-100 hover:grayscale-0 lg:mx-6 xl:mx-8">
+            <a href="https://www.google.com/" class="mx-4 max-w-[120px] py-4 opacity-60 grayscale transition duration-500 hover:opacity-100 hover:grayscale-0 lg:mx-6 xl:mx-8">
               <img src="dist/img/clients/google.png" alt="Google" />
             </a>
-            <a href="#" class="mx-4 max-w-[120px] py-4 opacity-60 grayscale transition duration-500 hover:opacity-100 hover:grayscale-0 lg:mx-6 xl:mx-8">
+            <a href="https://link.dana.id/qr/2z69vvls" class="mx-4 max-w-[120px] py-4 opacity-60 grayscale transition duration-500 hover:opacity-100 hover:grayscale-0 lg:mx-6 xl:mx-8">
               <img src="dist/img/clients/dana.svg.webp" alt="Gojek" />
             </a>
-            <a href="#" class="mx-4 max-w-[120px] py-4 opacity-60 grayscale transition duration-500 hover:opacity-100 hover:grayscale-0 lg:mx-6 xl:mx-8">
+            <a href="https://www.acer.com/id-id" class="mx-4 max-w-[120px] py-4 opacity-60 grayscale transition duration-500 hover:opacity-100 hover:grayscale-0 lg:mx-6 xl:mx-8">
               <img src="dist/img/clients/Acer.svg.png" alt="Tokopedia" />
             </a>
-            <a href="#" class="mx-4 max-w-[120px] py-4 opacity-60 grayscale transition duration-500 hover:opacity-100 hover:grayscale-0 lg:mx-6 xl:mx-8">
+            <a href="https://www.telkomsel.com/" class="mx-4 max-w-[120px] py-4 opacity-60 grayscale transition duration-500 hover:opacity-100 hover:grayscale-0 lg:mx-6 xl:mx-8">
               <img src="dist/img/clients/Telkomsel.svg.png" alt="traveloka" />
             </a>
           </div>
@@ -284,10 +284,10 @@
               <img src="https://source.unsplash.com/360x200?programming" alt="Programming" class="w-full" />
               <div class="py-8 px-6">
                 <h3>
-                  <a href="#" class="mb-3 block truncate text-xl font-semibold text-dark hover:text-primary dark:text-white">Tips Belajar Programming</a>
+                  <a href="https://teknik-informatika-s1.stekom.ac.id/informasi/baca/Tips-Belajar-Programming/f28273a31d36fc7961a8471a88e53fbd9b23f7a4" class="mb-3 block truncate text-xl font-semibold text-dark hover:text-primary dark:text-white">Tips Belajar Programming</a>
                 </h3>
-                <p class="mb-6 text-base font-medium text-secondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat officia beatae quisquam?</p>
-                <a href="#" class="rounded-lg bg-primary py-2 px-4 text-sm font-medium text-white hover:opacity-80">Baca Selengkapnya</a>
+                <p class="mb-6 text-base font-medium text-secondary">Bagi para pemula yang baru masuk dunia programming pasti sering bertanya-tanya..</p>
+                <a href="https://teknik-informatika-s1.stekom.ac.id/informasi/baca/Tips-Belajar-Programming/f28273a31d36fc7961a8471a88e53fbd9b23f7a4" class="rounded-lg bg-primary py-2 px-4 text-sm font-medium text-white hover:opacity-80">Baca Selengkapnya</a>
               </div>
             </div>
           </div>
@@ -296,10 +296,10 @@
               <img src="https://source.unsplash.com/360x200?mechanical+keyboard" alt="Mechanical Keyboard" class="w-full" />
               <div class="py-8 px-6">
                 <h3>
-                  <a href="#" class="mb-3 block truncate text-xl font-semibold text-dark hover:text-primary dark:text-white">Review Keyboard GMMK Pro</a>
+                  <a href="https://www-rtings-com.translate.goog/keyboard/reviews/glorious/gmmk-pro?_x_tr_sl=en&_x_tr_tl=id&_x_tr_hl=id&_x_tr_pto=tc" class="mb-3 block truncate text-xl font-semibold text-dark hover:text-primary dark:text-white">Review Keyboard GMMK Pro</a>
                 </h3>
-                <p class="mb-6 text-base font-medium text-secondary">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi facilis illum in.</p>
-                <a href="#" class="rounded-lg bg-primary py-2 px-4 text-sm font-medium text-white hover:opacity-80">Baca Selengkapnya</a>
+                <p class="mb-6 text-base font-medium text-secondary">GLORIOUS GMMK PRO adalah keyboard barebone yang tidak disertai keycaps..</p>
+                <a href="https://www-rtings-com.translate.goog/keyboard/reviews/glorious/gmmk-pro?_x_tr_sl=en&_x_tr_tl=id&_x_tr_hl=id&_x_tr_pto=tc" class="rounded-lg bg-primary py-2 px-4 text-sm font-medium text-white hover:opacity-80">Baca Selengkapnya</a>
               </div>
             </div>
           </div>
@@ -308,10 +308,10 @@
               <img src="https://source.unsplash.com/360x200?coffee" alt="Coffee" class="w-full" />
               <div class="py-8 px-6">
                 <h3>
-                  <a href="#" class="mb-3 block truncate text-xl font-semibold text-dark hover:text-primary dark:text-white">Menikmati Secangkir Kopi</a>
+                  <a href="https://www.detik.com/jabar/kuliner/d-6576949/cara-sehat-menikmati-secangkir-kopi" class="mb-3 block truncate text-xl font-semibold text-dark hover:text-primary dark:text-white">Menikmati Secangkir Kopi</a>
                 </h3>
-                <p class="mb-6 text-base font-medium text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, totam ipsum ea quam sequi velit sunt.</p>
-                <a href="#" class="rounded-lg bg-primary py-2 px-4 text-sm font-medium text-white hover:opacity-80">Baca Selengkapnya</a>
+                <p class="mb-6 text-base font-medium text-secondary">Banyak cara untuk bisa menikmati secangkir kopi. Anda bisa mencampur..</p>
+                <a href="https://www.detik.com/jabar/kuliner/d-6576949/cara-sehat-menikmati-secangkir-kopi" class="rounded-lg bg-primary py-2 px-4 text-sm font-medium text-white hover:opacity-80">Baca Selengkapnya</a>
               </div>
             </div>
           </div>
@@ -369,13 +369,13 @@
             <h3 class="mb-5 text-xl font-semibold text-white">Kategori Tulisan</h3>
             <ul class="text-slate-300">
               <li>
-                <a href="#" class="mb-3 inline-block text-base hover:text-primary">Programming</a>
+                <a href="#blog" class="mb-3 inline-block text-base hover:text-primary">Programming</a>
               </li>
               <li>
-                <a href="#" class="mb-3 inline-block text-base hover:text-primary">Teknologi</a>
+                <a href="#blog" class="mb-3 inline-block text-base hover:text-primary">Teknologi</a>
               </li>
               <li>
-                <a href="#" class="mb-3 inline-block text-base hover:text-primary">Gaya Hidup</a>
+                <a href="#blog" class="mb-3 inline-block text-base hover:text-primary">Gaya Hidup</a>
               </li>
             </ul>
           </div>
@@ -422,7 +422,7 @@
 
             <!-- Instagram -->
             <a
-              href="https://instagram.com/fwiaryanto25"
+              href="https://instagram.com/dwiaryanto25"
               target="_blank"
               class="mr-3 flex h-9 w-9 items-center justify-center rounded-full border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white"
             >
@@ -486,6 +486,7 @@
       <span class="mt-2 block h-5 w-5 rotate-45 border-t-2 border-l-2"></span>
     </a>
     <!-- Back to top End -->
+    
 
     <script src="dist/js/script.js"></script>
   </body>
