--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <div class="flex flex-wrap">
           <div class="mb-10 w-full px-4 lg:w-1/2">
             <h4 class="mb-3 text-lg font-bold uppercase text-primary">Tentang Saya</h4>
-            <h2 class="mb-5 max-w-md text-3xl font-bold text-dark dark:text-white lg:text-4xl">Siapa sih ini? Yuk saya jelaskan sedikit tentang saya</h2>
+            <h2 class="mb-5 max-w-md text-3xl font-bold text-dark dark:text-white lg:text-4xl">Yuk kenalan!</h2>
             <p class="max-w-xl text-base font-medium text-secondary lg:text-lg">Saya Dwi Mahasiswa UIN SMH Banten, dulu sebelum mengenal dunia coding dan programing saya senang sekali dengan dunia design serta menyukai dibidang photographi tapi entah kenapa saya sekarang lebih menyukai dunia pemograman hehe.. </p>
           </div>
           <div class="w-full px-4 lg:w-1/2">
