update cv dan email bawah

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <h2 class="mb-5 text-lg font-medium text-secondary lg:text-2xl">Designer & <span class="text-dark dark:text-white">Content Creator</span></h2>
             <p class="mb-10 font-medium leading-relaxed text-secondary">Yang penting Belajar dulu, kalau urusan <span class="font-bold text-dark dark:text-white">Gagal</span> itu masing-masing. hehe!!</p>
 
-            <a href="https://dwiaryanto25.github.io/CV-me/" class="rounded-full bg-primary py-3 px-8 text-base font-semibold text-white transition duration-300 ease-in-out hover:opacity-80 hover:shadow-lg">Show CV</a>
+            <a href="https://drive.google.com/file/d/1LPnP4XwvCTl5Rl3BMwbIfvUB5Sny-9El/view?usp=drivesdk" class="rounded-full bg-primary py-3 px-8 text-base font-semibold text-white transition duration-300 ease-in-out hover:opacity-80 hover:shadow-lg">Download CV</a>
           </div>
           <div class="w-full self-end px-4 lg:w-1/2">
             <div class="relative mt-10 lg:right-0 lg:mt-9">
@@ -361,7 +361,7 @@
           <div class="mb-12 w-full px-4 font-medium text-slate-300 md:w-1/3">
             <h2 class="mb-5 text-4xl font-bold text-white">WPU</h2>
             <h3 class="mb-2 text-2xl font-bold">Hubungi Kami</h3>
-            <p>dwiaryanto420@gmail.com</p>
+            <p>dwiaryanto@zohomail.com</p>
             <p>Jl. Syekh Hasan Bashri Kab. Tangerang</p>
             <p>Banten</p>
           </div>
