--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <h2 class="mb-5 text-lg font-medium text-secondary lg:text-2xl">Designer & <span class="text-dark dark:text-white">Content Creator</span></h2>
             <p class="mb-10 font-medium leading-relaxed text-secondary">Yang penting Belajar dulu, kalau urusan <span class="font-bold text-dark dark:text-white">Gagal</span> itu masing-masing. hehe!!</p>
 
-            <a href="https://drive.google.com/file/d/1LPnP4XwvCTl5Rl3BMwbIfvUB5Sny-9El/view?usp=drivesdk" class="rounded-full bg-primary py-3 px-8 text-base font-semibold text-white transition duration-300 ease-in-out hover:opacity-80 hover:shadow-lg">Download CV</a>
+            <a href="https://drive.google.com/file/d/1_O1wXXTCgJhUPa6ci5EoVqEICi1W26RD/view?usp=drivesdk" class="rounded-full bg-primary py-3 px-8 text-base font-semibold text-white transition duration-300 ease-in-out hover:opacity-80 hover:shadow-lg">Download CV</a>
           </div>
           <div class="w-full self-end px-4 lg:w-1/2">
             <div class="relative mt-10 lg:right-0 lg:mt-9">
@@ -109,7 +109,7 @@
           <div class="mb-10 w-full px-4 lg:w-1/2">
             <h4 class="mb-3 text-lg font-bold uppercase text-primary">Tentang Saya</h4>
             <h2 class="mb-5 max-w-md text-3xl font-bold text-dark dark:text-white lg:text-4xl">Yuk kenalan!</h2>
-            <p class="max-w-xl text-base font-medium text-secondary lg:text-lg">Saya Dwi Mahasiswa UIN SMH Banten, dulu sebelum mengenal dunia coding dan programing saya senang sekali dengan dunia design serta menyukai dibidang photographi tapi entah kenapa saya sekarang lebih menyukai dunia pemograman hehe.. </p>
+            <p class="max-w-xl text-base font-medium text-secondary lg:text-lg">Saya Dwi, saya masuk kuliah di UIN Sultan Maulana Hasanuddin Banten tahun 2021 dan saya mengambil Jurusan Ekonomi Syariah, selama menjalankan perkuliahan banyak kegiatan yang saya ikuti seperti Accurate, pelatihan Design Graphic atau pelatihan-pelatihan lainya sehingga saya memengetahui cara berkomunikasi serta berkerja sama menyelesaikan tugas atau project dalam sebuah tim. </p>
           </div>
           <div class="w-full px-4 lg:w-1/2">
             <h3 class="mb-4 text-2xl font-semibold text-dark dark:text-white lg:pt-10 lg:text-3xl">Mau lebih kenal? 😁</h3>
