merubah link linkedin

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
               <!-- LinkedIn -->
               <a
-                href="https://www.linkedin.com/in/dwi-aryanto-b796a8291"
+                href="https://www.linkedin.com/in/dwiaryanto25"
                 target="_blank"
                 class="mr-3 flex h-9 w-9 items-center justify-center rounded-full border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white"
               >
